--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "private": true,
 
   "dependencies": {
-    "dat-gui": "^0.5.0",
+    "dat-gui": "^0.5",
     "gl-matrix": "^2.3.1",
-    "stats.js": "^1.0.0"
+    "stats.js": "^1",
+
+    "performance-now": "^0.2",
+    "raf": "^3.1",
+    "setimmediate": "^1.0.2"
   },
 
   "devDependencies": {
     "browserify": "^11.0.1",
     "watchify": "^3.3.1",
-    "babelify": "^6.3.0",
-    "browserify-shader": "^0.1.0",
+    "babelify": "^6.3",
+    "browserify-shader": "^0.1",
     "browser-sync": "^2.9.3"
   },
 
