--- a/package.json
+++ b/package.json
@@ -4,13 +4,10 @@
   "private": true,
 
   "dependencies": {
-    "dat-gui": "^0.5",
+    "dat-gui": "0.5",
     "gl-matrix": "^2.3.1",
     "stats.js": "^1",
-
-    "performance-now": "^0.2",
-    "raf": "^3.1",
-    "setimmediate": "^1.0.2"
+    "raf": "^3.1"
   },
 
   "devDependencies": {
