--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
   "devDependencies": {
     "browserify": "^11.0.1",
     "watchify": "^3.3.1",
-    "babelify": "^6.3",
+    "babelify": "^7.2",
     "browserify-shader": "^0.1",
-    "browser-sync": "^2.9.3"
+    "browser-sync": "^2.9.3",
+    "babel-preset-es2015": "^6.5",
+    "babel-plugin-transform-exponentiation-operator": "^6.5"
   },
 
   "browserify": {
     "transform": [
-      ["babelify", {"loose": "all"}],
+      ["babelify", {
+        "presets": ["es2015"],
+        "plugins": ["transform-exponentiation-operator"]
+      }],
       ["browserify-shader", {"parameterize": true}]
     ]
   },
