--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "debug": "npm run dist -- -d",
     "watch": "npm run debug && watchify src -o dist/bundle.js -d --verbose",
     "live": "browser-sync start --server dist --files dist --no-open",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "deploy": "npm run dist && git checkout gh-pages && cp -u dist/* . && git commit -a -m update; git checkout master"
   }
 }
